--- a/head.html
+++ b/head.html
@@ -1,4 +1,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<script src="/scripts/lib-franklin.js" type="module"></script>
+<script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
-<link rel="stylesheet" href="/styles/styles.css"/>
+
+<!-- Aldevron styles -->
+<link rel="stylesheet" href="/styles/Typo.css"/>
+<link rel="stylesheet" href="/styles/template.css"/>
+<link rel="stylesheet" href="/styles/responsive.css"/>
+<link rel="stylesheet" href="/styles/gcse.css"/>
+
+<!-- Aldevron scripts -->
+<script src="./scripts/jquery-1.11.2.min.js" type="module"></script>
+<script src="./scripts/jquery.colorbox-min.js" type="module"></script>
+<script src="./scripts/swiper-342.jquery.min.js" type="module"></script>
+<script src="./scripts/main-scripts.js" type="module"></script>
+<!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script> -->
